--- a/.github/workflows/image-creation-poc.yml
+++ b/.github/workflows/image-creation-poc.yml
@@ -2,9 +2,9 @@ name: Package Image creator
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "image-creation" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "image-creation" ]
 
 
 jobs:
