--- a/.github/workflows/image-creation-poc.yml
+++ b/.github/workflows/image-creation-poc.yml
@@ -16,7 +16,7 @@ jobs:
       steps:
         - uses: actions/checkout@v1
         - name: Script using  repo variable
-          run: packer validate -syntax-only image-creation.hcl
+          run: packer validate -syntax-only .
           
       # This job is to setup and run packer to create managed image.       
     Setup-Run-Packer:
