--- a/.github/workflows/image-creation-poc.yml
+++ b/.github/workflows/image-creation-poc.yml
@@ -23,6 +23,7 @@ jobs:
       runs-on: ubuntu-latest
       environment: CSG_CRED
       steps:
+        - uses: actions/checkout@v1
         - name: Set up Azure CLI
           uses: azure/login@v1
           with:
