--- a/.github/workflows/image-creation-poc.yml
+++ b/.github/workflows/image-creation-poc.yml
@@ -21,7 +21,7 @@ jobs:
     # This job is to validate all the input values used in workflow.
     Validate-Inputs:
       if: ${{contains(vars.job_switches, 'validate') }} 
-      name: Validate Inputs
+      name: Pre Validation Stage - Validate Inputs
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v1
@@ -32,7 +32,7 @@ jobs:
     Setup-Run-Packer:
       if: ${{contains(vars.job_switches, 'packer') }} 
       needs: Validate-Inputs
-      name: Run packer
+      name: Image Build Stage - setup and run packer
       runs-on: ubuntu-latest
       environment: CSG_CRED
       steps:
@@ -51,7 +51,7 @@ jobs:
     Post-Validation:
       if: ${{contains(vars.job_switches, 'postvalidation') }} 
       needs: Setup-Run-Packer
-      name: Validate Image
+      name: Post Validation Stage - Validate Image
       runs-on: ubuntu-latest
       
       steps:
@@ -64,7 +64,7 @@ jobs:
       if: ${{contains(vars.job_switches, 'skip') }} 
       needs:
       - Post-Validation
-      name: Publish Image
+      name: Publish Image Stage
       runs-on: ubuntu-latest
       environment: development
       steps:
