--- a/.github/workflows/image-creation-poc.yml
+++ b/.github/workflows/image-creation-poc.yml
@@ -1,10 +1,12 @@
 name: Package Image creator
 on:
+  schedule:
+    - cron: '5 * * * *'
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  #push:
+   #branches: [ "main" ]
+  #pull_request:
+   # branches: [ "main" ]
 
 
 jobs:
